# quoridor-game

./: CMakeLists.txt  main.cpp
src/: game.cpp  game.h  types.h
src/ai/: Evaluation.cpp  Evaluation.hpp  GreedyAI.cpp  GreedyAI.hpp  MinimaxAI.cpp  MinimaxAI.hpp  MoveOrdering.cpp  MoveOrdering.hpp
src/core/: Board.cpp  Board.hpp  Constants.hpp  GameController.cpp  GameController.hpp  GameState.cpp  GameState.hpp  Rules.cpp  Rules.hpp  Search.cpp  Search.hpp  Types.cpp  Types.hpp
src/gui/: GuiApp.cpp  GuiApp.hpp  InputHandler.cpp  InputHandler.hpp  Renderer.cpp  Renderer.hpp
